package com.nanyin.pattern.v2.factory.AbsFactory;

/**
 * @author nanyin
 * @class Armor.java
 * @description TODO
 * @create 19:35 2020-04-18
 */
public interface Armor {
    String defence();
}
