package com.nanyin.pattern.v2.factory.AbsFactory;

/**
 * @author nanyin
 * @class WarFactory.java
 * @description TODO
 * @create 19:40 2020-04-18
 */
public interface WarFactory {
    public Weapon buildWeapon();
    public Armor buildArmor();
}
