package com.nanyin.pattern.v2.factory.AbsFactory;

/**
 * @author nanyin
 * @class Weapon.java
 * @description TODO
 * @create 14:06 2020-04-18
 */
public interface Weapon {
    /**
     * @title: attack
     * @description 抽象的工具方法
     * @param
     * @return java.lang.String
     * @author: nanyin
     * @update: 14:10 2020-04-18
     */
    public String attack();
}
